<resources>

    <string name="app_name">Captain</string>

    <!-- Menu strings -->
    <string name="menu_settings">Settings</string>
    <string name="menu_save">Save</string>
    <string name="menu_update">Update</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>

    <!-- Strings used for fragment titles -->
    <string name="title_list">Captain</string>
    <string name="title_add">New item</string>
    <string name="title_update">Edit item</string>
    <string name="title_view">Saved item</string>

    <!-- Strings for Toast messages -->
    <string name="toast_lockscreen_not_enabled">Lockscreen security not enabled in Settings</string>
    <string name="toast_fingerprint_permission_not_granted">Fingerprint permission not enabled</string>
    <string name="toast_fingerprint_not_supported">Fingerprint not supported</string>
    <string name="toast_authentication_cancelled">Authentication cancelled</string>
    <string name="toast_authentication_failed">Authentication failed</string>
    <string name="toast_authentication_success">Successful authentication</string>
    <string name="toast_menu_settings">Settings : no such thing, do your best</string>
    <string name="toast_menu_help">Help : no such thing, do your best</string>
    <string name="toast_menu_about">Johannes Carbonus fecit MMXXIII</string>

    <!-- Authentication prompts -->
    <string name="prompt_authentication_required">Authentication required</string>
    <string name="prompt_item_protected_by_fingerprint">This item is protected by fingerprint authentication</string>

    <!-- TextInputLayout hints -->
    <string name="txt_category">Category</string>
    <string name="txt_itemname">Name</string>
    <string name="txt_itemval">Code</string>
    <string name="txt_checkbox_fingerprint">Protected by fingerprint</string>
    <string name="txt_comments">comments</string>
    <string name="helper_name">Choose a name for this item</string>
    <string name="helper_itemval">Enter the item\'s value</string>
    <string name="helper_category">Choose a category</string>
    <string name="helper_comments">Optionnal comments</string>

    <!-- Error messages -->
    <string name="err_noname">No Name value</string>
    <string name="err_noitemval">No item value</string>
    <string name="err_name_already_exists">Name already exists</string>
    <string name="prompt_cancel">Cancel</string>


    <string name="dbid">dbId</string>
    <string name="rvid">rvId</string>
    <string name="dbidtxtt">dbId</string>
    <string name="rvidtxt">rvId</string>
    <string name="category">category</string>
    <string name="itemname">codename</string>
    <string name="udate_day">udate day</string>
    <string name="comments">comments</string>
    <string name="txt_checkbox_field1">Booléen 1</string>
    <string name="txt_checkbox_field2">Booléen 2</string>
    <string name="txt_checkbox_field3">Booléen 3</string>
    <string name="txt_checkbox_field4">Booléen 4</string>
    <string name="stueckname">stueckname</string>
    <string name="stueckid">stueckId</string>
    <string name="ct1">input stueck</string>
    <string name="ct2">kbox fingerprint one</string>
    <string name="ct3">kbox field two</string>
    <string name="ct4">kbox field three</string>
    <string name="ct5">kbox field four</string>
    <string name="cd6">kbox field five</string>

    <!-- Profiling -->
    <string name="nature">Target</string>
    <string name="nature1">Man</string>
    <string name="nature2">Woman</string>
    <string name="nature3">Child</string>
    <string name="styles">Style</string>
    <string name="styles1">Old style</string>
    <string name="styles2">Normal</string>
    <string name="styles3">Vulgar</string>
    <string name="criteria">Categories</string>
    <string name="criteria1">Anatomy</string>
    <string name="criteria2">Abilities</string>
    <string name="criteria3">Sexual life</string>
    <string name="criteria4">Ethnic</string>
    <string name="criteria5">Defects</string>
    <string name="criteria6">Animals</string>
    <string name="criteria7">Various</string>
    <string name="message_statement_empty">Text must contain at least one letter - not saved</string>
    <string name="message_statement_already_exists">Text already exists - not saved</string>
    <string name="save_settings">Save settings</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="profile">Profile</string>
    <string name="list">List</string>
    <string name="err_invalid_bools">invalid profile</string>
    <string name="menu_profile">Profiling</string>
    <string name="hello_nb_in_profile">nbinprofile</string>
    <string name="hello_next">Next</string>
    <string name="next">Next</string>
    <string name="reset">reset</string>
    <string name="menu_load">Load</string>


    <!-- Category items -->
</resources>